# dokidoki

./: CONSTITUTION.md  README.md
docs/: Prompt规范.md  tasks.md  接口设计说明书.md  概要设计说明书.md  详细设计说明书.md  需求分析说明书.md
dokidoki-app/: README.md  pubspec.yaml
dokidoki-app/android/app/: build.gradle.kts
dokidoki-app/ios/Runner.xcodeproj/: project.pbxproj
dokidoki-app/lib/: app.dart  main.dart
dokidoki-app/linux/: CMakeLists.txt
dokidoki-app/web/: index.html  manifest.json
dokidoki-app/windows/: CMakeLists.txt
dokidoki-server/: .gitignore  Cargo.toml  config.toml.example
dokidoki-server/migrations/: 20260708120000_init.sql
dokidoki-server/seeds/: README.md  dev_characters.sql
dokidoki-server/src/: api.rs  auth.rs  chat.rs  config.rs  db.rs  domain.rs  error.rs  lib.rs  llm.rs  main.rs  memory.rs  persona.rs  proactive.rs  prompt.rs  schedule.rs  state.rs  summary.rs  test_support.rs  time.rs  upload.rs  utils.rs  ws_hub.rs
dokidoki-server/src/api/: extractors.rs  middleware.rs  response.rs  rest.rs  ws.rs
dokidoki-server/src/api/rest/: auth.rs  characters.rs  conversations.rs  dev.rs  health.rs  messages.rs  users.rs
dokidoki-server/src/chat/: burst.rs  context.rs  conversation_fsm.rs  delivery.rs  format_guard.rs  parser.rs  read_receipt.rs  reply_delay.rs  reply_scheduler.rs
dokidoki-server/src/db/: message.rs  models.rs  pool.rs  queries.rs
dokidoki-server/src/db/queries/: character_settings.rs  character_states.rs  characters.rs  conversations.rs  memories.rs  messages.rs  proactive_logs.rs  sessions.rs  users.rs
dokidoki-server/src/domain/: auth.rs  availability.rs  avatar.rs  character_settings.rs  characters.rs  conversation_status.rs  conversations.rs  messages.rs  persona.rs  users.rs
dokidoki-server/src/llm/: backend.rs  fake.rs  http.rs  schema.rs
dokidoki-server/src/memory/: cleanup.rs  parser.rs  service.rs  types.rs
dokidoki-server/src/persona/: prompt.rs
dokidoki-server/src/proactive/: char_schedule.rs  daily_greeting.rs  deliver.rs  gates.rs  pre_sleep.rs  re_engage.rs  schedule_change.rs  silence_wake.rs  triggers.rs
dokidoki-server/src/prompt/: chat.rs  summary.rs  templates.rs
dokidoki-server/src/schedule/: resolver.rs  scheduler.rs  types.rs
dokidoki-server/src/summary/: compact.rs
dokidoki-server/src/test_support/: http.rs
dokidoki-server/tests/: auth_api.rs  characters_api.rs  chat_api.rs  conversations_api.rs  health_api.rs  messages_api.rs  timezone.rs  users_api.rs
(+52 files in other folders)
