[package]
name = "dokidoki-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.9"
axum-extra = { version = "0.12.6", features = ["typed-header"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "json"] }
