[package]
name = "dokidoki-server"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.9", features = ["ws"] }
axum-extra = { version = "0.12.6", features = ["typed-header"] }
chrono = { version = "0.4.45", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["chrono", "mysql", "migrate", "runtime-tokio", "mysql-rsa"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "json"] }
validator = { version = "0.20.0", features = ["derive"] }
uuid = { version = "1.23.4", features = ["v4"] }
sha2 = "0.11.0"
rand_core = { version = "0.6", features = ["getrandom"] }
http-body-util = "0.1.3"
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.8", features = ["cors"] }
chrono-tz = "0.10.4"
futures-util = "0.3.32"
tokio-tungstenite = "0.29.0"
async-trait = "0.1.89"
reqwest = { version = "0.13.4", features = ["json", "rustls"] }

